--- a/main.html
+++ b/main.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Feedback Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <h1>Feedback Form</h1>
+
+    <form action="" method="POST">
+
+        <label for="name">Name (required)</label><br>
+        <input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+        <br><br>
+
+        <label for="portfolio">Portfolio (required)</label><br>
+        <input type="url" id="portfolio" name="portfolio" required>
+        <br><br>
+
+        <label for="favColor">Favorite Color (required)</label><br>
+        <input type="color" id="favColor" name="favColor" required>
+        <br><br>
+
+        <label for="likeness">Likeness (1–100) required</label><br>
+        <input type="range" id="likeness" name="likeness" min="1" max="100" required>
+        <br><br>
+
+        <button type="submit">Submit</button>
+
+    </form>
 
 </body>
-
 </html>
